syntax = "proto3";

import "google/protobuf/timestamp.proto";

package goshop.user.v1;

option go_package = "github.com/toji-dev/go-shop/proto/gen/go/proto/user/v1;user_v1";

service UserService {
    rpc GetAddressById(GetAddressRequest) returns (GetAddressResponse);
}

message GetAddressRequest {
    string address_id = 1; 
}

message GetAddressResponse {
    Address address = 2;
}

message Address {
    string id = 1;
    string user_id = 2;
    bool is_default = 3;
    string street = 4;
    string ward = 5;
    string district = 6;
    string city = 7;
    string country = 8;
    double lat = 9;
    double long = 10;
    google.protobuf.Timestamp deleted_at = 11;
    google.protobuf.Timestamp created_at = 12;
    google.protobuf.Timestamp updated_at = 13;
}